[gd_scene load_steps=6 format=3 uid="uid://rmkj152th507"]

[ext_resource type="Script" uid="uid://b71kdqdi3n38f" path="res://NarrativeSys/dialogue_ui.gd" id="1_njptv"]
[ext_resource type="Texture2D" uid="uid://cjgnrx4toxl5c" path="res://asset/ecbb8a7a8093fb9.png" id="2_8yukw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nq0nh"]

[sub_resource type="ImageTexture" id="ImageTexture_8yukw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3a13t"]

[node name="DialogueUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_njptv")

[node name="BackgroundTexture" type="TextureRect" parent="."]
modulate = Color(0.48178947, 0.48178947, 0.48178947, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 604.0
offset_top = 2.0
offset_right = -1.0
offset_bottom = 63.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_8yukw")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 209.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="PortraitPanel" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 400)
layout_mode = 2
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxEmpty_nq0nh")

[node name="PortraitTexture" type="TextureRect" parent="MarginContainer/HBoxContainer/PortraitPanel"]
layout_mode = 2
texture = SubResource("ImageTexture_8yukw")
expand_mode = 2
stretch_mode = 5
flip_h = true

[node name="DialoguePanel" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_3a13t")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/DialoguePanel"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ResourceLabel" type="Label" parent="MarginContainer/HBoxContainer/DialoguePanel/VBoxContainer"]
layout_mode = 2
text = "Qi (氣): 20/100 | Jing (精): 10/50 | Shen (神): 10/50"
horizontal_alignment = 2

[node name="ScrollArea" type="ScrollContainer" parent="MarginContainer/HBoxContainer/DialoguePanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 0

[node name="ContentContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/DialoguePanel/VBoxContainer/ScrollArea"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DialogueLabel" type="RichTextLabel" parent="MarginContainer/HBoxContainer/DialoguePanel/VBoxContainer/ScrollArea/ContentContainer"]
clip_contents = false
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Dialogue will appear here."
fit_content = true
scroll_following = true

[node name="ChoicesContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/DialoguePanel/VBoxContainer/ScrollArea/ContentContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="ContinueButton" type="Button" parent="MarginContainer/HBoxContainer/DialoguePanel/VBoxContainer"]
layout_mode = 2
text = "Continue."
